fixed alignment of project-nav

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -480,7 +480,7 @@ a.source-btn:hover {
   width: 41px;
   position: absolute;
   background: transparent url(/images/project-nav.png) 0 0 no-repeat;
-  top: 42px;
+  top: 47px;
   right: 1px;
   z-index: 99;
   padding: 8px 0 0 13px;
